redis-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  namespace: voting-app
  labels:
    name: redis-deploy
    app: demo-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
      app: demo-voting-app
  template:
    metadata:
      name: redis-pod
      labels:
        name: redis-pod
        app: demo-voting-app
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
