postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: voting-app
  labels:
    name: postgres-service
    app: demo-voting-app
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    name: postgres-pod
    app: demo-voting-app
